<resources>
    <string name="app_name">Billingwala Admin</string>
    <string name="splash_loading">Loading Dashboard...</string>
    <string name="logout">Logout</string>
    <string name="privacy_policy">By providing email &amp; password, I hereby agree and accept the <u><font fgcolor='#df0052'>Terms of service</font></u> and <u><font fgcolor='#df0052'>Privacy Policy</font></u> in use of the POS Billingwala Admin app.</string>
    <string name="sign_in_msg">Sign In to \nkeep do amazing Billing\nwith POS Billingwala</string>
    <string name="mobile_number_msg">Enter your shop licence key. We\'ll verify your account, so we know you\'re real.</string>


    <string name="inr">\u20B9</string>

    <string name="label_month">MONTH</string>
    <string name="label_year">YEAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user">New User? <u><font fgcolor='#df0052'>Signup Here</font></u></string>
    <string name="support_phone_display">+91 89831 49299</string>
    <string name="support_phone_dial">+918983149299</string>
    <string name="new_user_support_team">Do you want to test or use our POS offline/online application, enter you registered licence key in login page and access the application. If you are new user please contact our support team (%1$s) and get your licence key to access our POS application.</string>

    <string name="in_app_snack_bar_message">Update almost finished!</string>
    <string name="in_app_snack_bar_action_title">RESTART</string>
    <string name="download_file"><b><font fgcolor='#5B37B7'>Download Demo Product Excel</font></b>\n<font fgcolor='#1092AA'>( Edit this download file and upload here )</font>\n<b>Note: Don\'t upload other format file</b></string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="product">Product</string>
    <string name="ui_no_data_found">No data found</string>
    <string name="empty_sub_products">Add products for this customer to build their catalog.</string>
    <string name="empty_sub_categories">Add categories first for this customer.</string>
    <string name="empty_sub_subcategories">Add subcategories under a category.</string>
    <string name="empty_sub_portions">Add portion sizes like Half / Full.</string>
    <string name="empty_sub_customers">No customers found. Use + to add a customer.</string>
    <string name="empty_sub_dealers">No dealers found. Use + to add a dealer.</string>
    <string name="empty_sub_dealer_customers">No customers for this dealer.</string>

    <string name="licence_template_title">Business template</string>
    <string name="licence_template_intro">Choose the POS business template for this licence. The outlet device applies it on the next Fetch Data.</string>
    <string name="licence_template_pick">Template</string>
    <string name="licence_template_save">Save template</string>
    <string name="licence_template_saving">Saving…</string>
    <string name="licence_template_current_placeholder">Current: —</string>
    <string name="licence_template_current">Current: %1$s · %2$s</string>
    <string name="licence_template_load_failed">Could not load current template</string>
    <string name="licence_template_failed">Save failed. Try again.</string>
    <string name="licence_template_confirm_title">Apply template?</string>
    <string name="licence_template_confirm_body">Set this licence to “%1$s”?</string>
    <string name="licence_template_button">Business template</string>
    <string name="licence_template_sync_modules">Also update Fast / Dine-In / Take Away / Mess modules</string>

</resources>